# infinity-mirror-sw

./: CMakeLists.txt  Dockerfile  Jenkinsfile
ARCHIVE/esp32-firmware/: Makefile  sdkconfig
ARCHIVE/esp32-firmware/components/led_controller/: Kconfig.projbuild
components/led_controller/: CMakeLists.txt  led_controller.c
esp32-firmware/: sdkconfig.old
esp32-firmware/components/esp32-neopixel/: ws2812_control.c
esp32-firmware/components/led_controller/: led_controller.h
main/: CMakeLists.txt  infinity_mirror_main.c
micropython/: clock.py  espnetwork.py  ledController.py  main.py  peripherals.py  test.py
micropython/src/: clock.py  hw_test.py  ledController.py  readme.md
src/: hw_validation.py  ledController.py  main.py  peripherals.py
test/: test_file.py
